--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
+    "googleapis": "^42.0.0",
     "knex": "^0.13.0",
-    "mysql": "^2.17.1",
-    "youtube-api": "^2.0.10"
+    "mysql": "^2.17.1"
   }
 }
